<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.binitshah.caps.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/notification_alert"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="1dp"
        android:src="@drawable/ic_notifications_none_black_24dp"
        android:layout_toStartOf="@+id/profile_image"
        android:contentDescription="@string/notifications"/>

    <ImageView
        android:id="@+id/filters_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="1dp"
        android:src="@drawable/ic_arrow_drop_down_circle_black_24dp"
        android:contentDescription="@string/notifications"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:contentDescription="@string/propicholder_imagedescription" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submitbuttontext"
        android:theme="@style/Button"
        android:id="@+id/submit_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
