<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="@dimen/activity_margin"
    android:background="@drawable/background_gradient"
    tools:context="com.binitshah.caps.SigninActivity">

    <ImageView
        android:id="@+id/signin_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logoinverted"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/signin_logo">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/email_hint"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:layout_margin="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/password_hint"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:layout_margin="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:theme="@style/InverseButton"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_button"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:theme="@style/InverseButton"
                android:layout_margin="10dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fbbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_button"
        android:textSize="13sp"
        android:fontFamily="sans-serif"
        android:theme="@style/FBButton"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/gbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_signin_button_text_long"
        android:textSize="13sp"
        android:fontFamily="sans-serif"
        android:theme="@style/GOOButton"
        android:layout_above="@+id/fbbutton"
        android:layout_centerHorizontal="true"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebooksignin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" />
</RelativeLayout>
