<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    card_view:cardCornerRadius="4dp"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/cap_image"
            android:background="@color/babyblue"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gap_detail"
            android:id="@+id/cap_title"
            android:layout_below="@id/cap_image"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_description"
            android:id="@+id/cap_description"
            android:layout_below="@id/cap_title"
            android:layout_alignParentStart="true"
            android:textSize="17sp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorText"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star1"
                android:src="@drawable/ic_star_black_24dp"
                android:layout_gravity="right" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star2"
                android:src="@drawable/ic_star_black_24dp"
                android:layout_gravity="right" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star3"
                android:src="@drawable/ic_star_black_24dp"
                android:layout_gravity="right" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star4"
                android:src="@drawable/ic_star_half_black_24dp"
                android:layout_gravity="right" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star5"
                android:src="@drawable/ic_star_border_black_24dp"
                android:layout_gravity="right" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cap_friend_imageview"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:contentDescription="@string/propicholder_imagedescription" />

    </RelativeLayout>

</android.support.v7.widget.CardView>